@@ -1,8 +1,0 @@
-Package: libksi-devel
-Version: @VER@
-Section: devel
-Priority: optional
-Architecture: @ARCH@
-Depends: libcurl3, libssl0.9.8 | libssl1.0.0
-Maintainer: Guardtime <support@guardtime.com>
-Description: KSI C API development library.
