@@ -1,10 +1,10 @@
-Source: libksi
+Source: @PACKAGE@
 Section: devel
 Priority: optional
 Build-Depends: libcurl3, libssl0.9.8 | libssl1.0.0
 Maintainer: Guardtime <support@guardtime.com>
 
-Package: libksi
+Package: @PACKAGE@
 Architecture: any
 Section: devel
 Priority: optional
