@@ -1,4 +1,5 @@
 * BUGFIX: Fixed clang static analyze findings.
+* IMPROVEMENT: Debian packaging refactored and fixed.
 * IMPROVEMENT: Added KSI_SignatureBuilder_createSignatureWithAggregationChain function.
 * IMPROVEMENT: Removed calendar-based verification from the default verification policy.
 * IMPROVEMENT: New verification rule for verifing document hash algorithm.
